--- a/css/hero-banner.css
+++ b/css/hero-banner.css
@@ -1,4 +1,49 @@
 html {
   box-sizing: border-box;
-  font-family: "Open Sans"
+  font-family: "Open Sans";
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+.banner {
+  position: relative;
+  max-height: 500px;
+  overflow: hidden;
+
+}
+
+.banner-img {
+  width: 100%;
+}
+
+.banner-content {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #fff;
+  max-width: 50em;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+
+}
+
+.banner-content p {
+  color: black;
+  font-family: "open sans";
+  font-size: 2rem;
+}
+
+.banner-content h1 {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top: 0;
+  margin-right: 0;
+  font-family: "open sans";
+  font-size: 4rem;
 }
