--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,6 @@ body {
 }
 
 .banner-content {
-  position: absolute;
   bottom: 0;
   width: 100%;
   color: #fff;
@@ -42,7 +41,7 @@ body {
 
 .banner-content h1 {
   background-color: rgba(0, 0, 0, 0.5);
-  margin-top: 0;
+  margin-top: .2em;
   margin-right: 0;
   font-family: "open sans";
   font-size: 4rem;
